--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,11 +5,31 @@
 .footer-title{
     color: rgb(243, 243, 243);
 }
-.footer-right ul{
+.footer-left ul{
     list-style: none;
     color: rgb(243, 243, 243);
 
 }
-.footer-right{
+.footer-left{
     margin-bottom: 5px;
+}
+
+@media screen and (max-width: 500px) {
+    .footer-cover{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-left{
+        margin-right: 30px;
+    }
+    .footer-right{
+        width: 100%!important;
+    }
+    .footer-title{
+        font-size: 27px;
+    }
+    .footer-det{
+        font-size: 14px;
+        margin-bottom: 17px;
+    }
 }
