--- a/src/components/Dashboard/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard/Dashboard.css
@@ -9,3 +9,8 @@
     font-size: 20px;
     text-decoration: none;
 }
+@media screen and (max-width: 500px) {
+    .dashItem{
+        grid-template-columns: repeat(1 , 1fr);
+    }
+}
