--- a/src/components/Hotels/Hotels.css
+++ b/src/components/Hotels/Hotels.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(3 , 1fr);
     gap: 20px;
 }
+
+@media screen and (max-width: 500px) {
+    .grid {
+        grid-template-columns: repeat(1 , 1fr);
+    }
+}
