--- a/src/components/Info&direaction/Info&direction.css
+++ b/src/components/Info&direaction/Info&direction.css
@@ -18,3 +18,12 @@
         z-index: -1;
         display: block;
     }
+
+@media screen and (max-width: 500px) {
+    .web-banner{
+        padding: 150px 30px;
+    }
+    .banner-title{
+        font-size: 22px;
+    }
+}
