--- a/src/components/WelcomeSec/WelcomeSec.css
+++ b/src/components/WelcomeSec/WelcomeSec.css
@@ -11,3 +11,9 @@
     width: 100%;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 500px) {
+    .grid-img{
+        grid-template-columns: repeat(1 , 1fr);
+    }
+}
